# const_base

./: Cargo.toml  Changelog.md  README.md
.github/workflows/: rust.yml
src/: __convert.rs  __macro_args.rs  __priv_utils.rs  array_str.rs  base_16.rs  base_32.rs  base_64.rs  codec_macros.rs  config.rs  encode_decode_shared.rs  encoding.rs  errors.rs  internal_macros.rs  lib.rs  macros.rs  msg.rs  msg_macros.rs  test_utils.rs  tests.rs  utils.rs
src/tests/: array_str_tests.rs  base16_tests.rs  base32_tests.rs  base64_tests.rs  type_level_errors.rs  ui_tests.rs
src/tests/ui/: decode_err.rs  decode_err.stderr
