[package]
name = "const_base"
version = "0.1.1"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2018"
license = "Zlib"
description = "Decoding/encoding base 64/32/16 strings at compile-time"
documentation = "https://docs.rs/const_base/"
readme="./README.md"
keywords = ["no-std", "encoding", "base64", "const-fn"]
categories = ["no-std", "encoding"]
repository = "https://github.com/rodrimati1992/const_base/"
include = [
    "Cargo.toml", 
    "src/**/*.rs", 
    "README.md",
    "LICENSE-ZLIB.md", 
]

[dependencies]

[dev-dependencies.data-encoding]
version = "2.3.2"
default_features = false

[dev-dependencies.base64]
version = "0.13.0"
default_features = false

[dev-dependencies.rand]
version = "0.8"
default_features = false
features = ["small_rng"]

[dev-dependencies.itertools]
version = "0.10"
default_features = false





